--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "regenerator-runtime": "^0.13.1",
     "serve": "^12.0.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0"
+    "stylelint-config-recommended": "^5.0.0",
+    "webpack": "^5.65.0"
   },
   "engines": {
     "node": ">=10"
