--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^24.1.0",
-    "htmlhint": "^0.15.1",
+    "htmlhint": "^0.9.9",
     "jest": "^27.0.1",
     "regenerator-runtime": "^0.13.1",
-    "serve": "^12.0.0",
+    "serve": "^13.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0"
   },
   "engines": {
     "node": ">=10"
+  },
+  "dependencies": {
+    "firebase": "^9.6.1"
   }
 }
